# energy-forecast-benchmark-toolkit

./: .dockerignore  .gitignore  404.html  LICENCE  Makefile  README.md  index.html  pyproject.toml
.github/workflows/: publish-docs.yml  publish-to-pypi.yml
docker/base/amazon-chronos/: Dockerfile
docker/base/darts/: Dockerfile
docker/base/salesforce-moirai/: Dockerfile
docker/base/skforecast/: Dockerfile
docker/base/sktime/: Dockerfile
docker/base/statsforecast/: Dockerfile
docs/: mkdocs.yml
docs/docs/: examples.md  index.md
examples/: index.html
models/amazon-chronos/: Dockerfile  requirements.txt
models/amazon-chronos/models/: .gitignore
models/amazon-chronos/src/: main.py
models/amazon-chronos_bolt/models/: .gitignore
models/amazon-chronos_bolt/src/: main.py
models/amazon-chronos_t5/src/: main.py
models/darts-daily_naive/src/: main.py
models/darts-four_theta/src/: main.py
models/darts-lightgbm/: Dockerfile  requirements.txt
models/darts-lightgbm/src/: main.py
models/darts-linear_regression/src/: main.py
models/darts-naive_drift/src/: main.py
models/darts-naive_mean/: Dockerfile
models/darts-naive_mean/src/: main.py
models/darts-naive_moving_avg/src/: main.py
models/darts-theta/src/: main.py
models/dt-daily-naive/: requirements.txt
models/dt-daily-naive/src/: main.py
models/dt-four-theta/: Dockerfile  requirements.txt
models/dt-four-theta/src/: main.py
models/dt-global-linear-regression/: Dockerfile  requirements.txt
models/dt-global-linear-regression/src/: Global_Regression_model_darts.pkl  darts_global_training_data.py  main_prediction.py
models/dt-lightgbm/: Dockerfile  requirements.txt
models/dt-lightgbm-direct/: Dockerfile  requirements.txt
models/dt-lightgbm-direct/src/: main.py
models/dt-lightgbm/src/: main.py
models/dt-linear-regression/: Dockerfile
models/dt-linear-regression/src/: main.py
models/dt-naive-drift/src/: main.py
models/dt-naive-mean/: Dockerfile
models/dt-naive-mean/src/: main.py
models/dt-naive-moving-avg/: Dockerfile
models/dt-naive-moving-avg/src/: main.py
models/dt-theta/: Dockerfile  requirements.txt
models/dt-theta/src/: main.py
models/lear/: Dockerfile  requirements.txt
models/lear/src/: main.py
models/lear/src/epftoolbox/data/: __init__.py  _datasets.py  _wrangling.py
models/lear/src/epftoolbox/evaluation/: __init__.py  _ancillary_functions.py  _dm.py  _gw.py  _mae.py  _mape.py  _mase.py  _rmae.py  _rmse.py  _smape.py  color_map_epf.py  compute_gw_test.py  gw.py
models/lear/src/epftoolbox/models/: __init__.py  _lear.py
models/nixtla-timegpt/: Dockerfile  requirements.txt
models/nixtla-timegpt/src/: main.py
models/salesforce-moirai/: Dockerfile
models/salesforce-moirai/models/: .gitignore
models/salesforce-moirai/src/: main.py
models/sf-auto-ces/: Dockerfile
models/sf-auto-ces/src/: main.py
models/sf-historic-average/: Dockerfile
models/sf-historic-average/src/: main.py
models/sf-mstl/src/: main.py
models/sf-naive/: Dockerfile  requirements.txt
models/sf-naive-seasonal/: Dockerfile  requirements.txt
models/sf-naive-seasonal-avg/: Dockerfile
models/sf-naive-seasonal-avg/src/: main.py
models/sf-naive-seasonal/src/: main.py
models/sf-naive/src/: main.py
models/sf-seasonal-es/: Dockerfile
models/sf-seasonal-es/src/: main.py
models/skforecast-lightgbm/: requirements.txt
models/skforecast-lightgbm/src/: main.py
models/skforecast-regressor/: Dockerfile
models/skforecast-regressor/src/: main.py
models/sktime-naive_mean/: Dockerfile  requirements.txt
models/sktime-naive_mean/src/: main.py
models/st-naive/: Dockerfile
models/st-naive-mean/: Dockerfile  requirements.txt
models/st-naive-mean/src/: main.py
models/st-naive/src/: main.py
models/statsforecast-auto_ces/src/: main.py
models/statsforecast-historic_average/src/: main.py
models/statsforecast-mstl/src/: main.py
models/statsforecast-naive/src/: main.py
models/statsforecast-naive_seasonal/: Dockerfile  requirements.txt
models/statsforecast-naive_seasonal/src/: main.py
models/statsforecast-naive_seasonal_avg/src/: main.py
models/statsforecast-seasonal_es/src/: main.py
notebooks/: 01. Univariate.ipynb  02. Multivariate.ipynb  03. ForecastClient.ipynb  04. Benchmarking.ipynb
search/: search_index.json
src/enfobench/: __init__.py  py.typed  utils.py
src/enfobench/core/: __init__.py  dataset.py  model.py
src/enfobench/dataset/: __init__.py  _dataset.py  utils.py
src/enfobench/datasets/: __init__.py  base.py  electricity_demand.py  gas_demand.py  pv_generation.py  utils.py
src/enfobench/evaluation/: __init__.py  _cross_validate.py  _evaluate.py  client.py  evaluate.py  filters.py  metrics.py  model.py  protocols.py  server.py  utils.py
src/enfobench/visualization/: demand.py  predicitons.py
tags/: index.html
tests/: conftest.py  test_dataset.py  test_example.py  test_metrics.py
tests/test_dataset/: test_dataset.py  test_utils.py
tests/test_evaluations/: test_evaluate.py  test_filters.py  test_metrics.py  test_server.py  test_utils.py
