[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enfobench"
description = "Energy forecast benchmarking toolkit."
authors = [
    { author = "Attila Balint", email = "attila.balint@kuleuven.be" },
]
readme = "README.md"
packages = [{ include = "enfobench", from = "src" }]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "fastapi>=0.68.0,<1.0.0",
    "pandas>=1.3.0,<2.0.0",
    "pydantic>=1.0.0,<2.0.0",
    "python-multipart>=0.0.0,<1.0.0",
    "pyarrow>=12.0.0,<13.0.0",
    "requests>=2.26.0,<3.0.0",
    "tqdm>=4.60.0,<5.0.0",
    "uvicorn>=0.20.0,<1.0.0",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/attila-balint-kul/energy-forecast-benchmark-toolkit"

[project.optional-dependencies]
test = [
    "black==23.3.0",
    "isort==5.12.0",
    "mypy==1.4.0",
    "ruff==0.0.274",
    "pytest==7.3.2",
]
dev = [
    "twine>=4.0.0,<5.0.0",
    "pre-commit>=3.0.0,<4.0.0",
]


[tool.hatch.version]
path = "src/enfobench/__version__.py"

[tool.hatch.build]
exclude = [
    ".DS_Store",
]

[tool.hatch.build.targets.sdist]
only-include = [
    "src/",
    "tests/",
    "LICENSE",
    "Makefile",
    "README.md",
    "pyproject.toml",
]


[tool.black]
line-length = 99
target-version = ["py310", ]


[tool.ruff]
target-version = "py310"
line-length = 99
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    # "I",  # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Don't touch unused imports

[tool.ruff.isort]
known-first-party = ["enfobench"]

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
python_version = "3.10"
files = ["src/enfobench"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
warn_no_return = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
check_untyped_defs = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source_pkgs = [
    "enfobench",
    "tests",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
